--- a/src/styles/globalStyles.scss
+++ b/src/styles/globalStyles.scss
@@ -1,1 +1,16 @@
 @import "./reset.scss";
+@import "https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap";
+
+
+:root {
+  --Color-Blue: #6787f9;
+  --Color-Black: #000000;
+  --Color-Black50: rgba(0, 0, 0, 0.5);
+  --Color-White: #ffffff;
+
+  --Font-Poppins: "Poppins", sans-serif;
+  --Font-Inter: "Inter", sans-serif;
+
+  --Font-Size-h1: clamp(2.25rem, 2.083rem + 0.463vw, 2.5rem);
+  --Font-Size-h2-p: clamp(0.75rem, 0.583rem + 0.463vw, 1rem);
+}
