--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -26,3 +26,10 @@
   line-height: 19px;
   font-weight: 700;
 }
+
+.textLabel {
+  font-family: var(--Font-Inter);
+  font-size: 14px;
+  line-height: 19px;
+  font-weight: 400;
+}
