--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -1,6 +1,7 @@
 .container {
   box-sizing: border-box;
-  padding: 40px 40px;
+  padding: clamp(1.25rem, 0.417rem + 2.315vw, 2.5rem)
+    clamp(1.25rem, 0.417rem + 2.315vw, 2.5rem);
   width: 100%;
   display: flex;
   align-items: center;
@@ -10,10 +11,14 @@
   .containerInfos {
     width: 100%;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-
     color: var(--Color-White);
+  }
+}
+@media (width <= 576px) {
+  .containerInfos {
+    flex-direction: column;
+    gap: 0.9375rem;
   }
 }
