--- a/src/components/Main/BooksInfoSection/AsideSection/PriceFilter/PriceInput/styles.module.scss
+++ b/src/components/Main/BooksInfoSection/AsideSection/PriceFilter/PriceInput/styles.module.scss
@@ -2,4 +2,17 @@
   display: flex;
   flex-direction: column;
   gap: 0.625rem;
+  box-sizing: border-box;
+}
+
+@media (width<=576px) {
+  .container {
+    width: 100%;
+    align-items: center;
+    gap: 0.375rem;
+
+    input {
+      width: 40%;
+    }
+  }
 }
