--- a/src/components/Main/BooksInfoSection/BooksSection/styles.module.scss
+++ b/src/components/Main/BooksInfoSection/BooksSection/styles.module.scss
@@ -19,13 +19,13 @@
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      gap: 2rem;
+      gap: clamp(0.625rem, -9.647rem + 12.941vw, 2rem);
       align-items: center;
 
       .card {
         position: relative;
         left: -1000px;
-        width: 276px;
+        width: 251px;
         height: 70px;
         padding: 40px 20px;
         display: flex;
@@ -34,15 +34,37 @@
         align-items: center;
         border-left: 4px solid var(--Color-Blue);
         box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.43);
+
+        .cardTitle {
+          h2 {
+            font-size: clamp(0.75rem, 0.583rem + 0.463vw, 0.875rem);
+          }
+
+          p {
+            font-size: clamp(0.75rem, 0.583rem + 0.463vw, 0.875rem);
+          }
+        }
       }
     }
   }
 }
 
+@media (width<=768px) {
+  .container {
+    padding-left: 50px;
+  }
+  .containerBookList {
+    ul {
+      align-items: center;
+      justify-content: center;
+    }
+  }
+}
 @media (width <=576px) {
   .container {
     width: 100%;
     position: relative;
+    left: 20px;
     padding-left: 20px;
   }
 
